# trickster-protocol

./: .gitignore  LICENSE  PROTOCOL.md  README.md  STATE.md  birth.mjs  package-lock.json  package.json  play.mjs  pyproject.toml  vercel.json
.nlp-bridge/: gate
site/: index.html
src/: index.mjs
src/trickster/: __init__.py  cli.py  cross_engine.py  jokes.py  pollinate.py  server.py
tests/: test_trickster.py
