[project]
name = "trickster-protocol"
version = "0.1.0"
description = "整蠱專家 Protocol — forgotten internet protocols carry jokes. Truth as comedy."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trickster = "trickster.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]